@@ -891,11 +891,7 @@ line break."
          (output-ugly-object stream array))
         ((and *print-readably*
               (not (array-readably-printable-p array)))
-         (if *read-eval*
-             (if (vectorp array)
-                 (sb!impl::output-unreadable-vector-readably array stream)
-                 (sb!impl::output-unreadable-array-readably array stream))
-             (print-not-readable-error array stream)))
+         (sb!impl::output-unreadable-array-readably array stream))
         ((vectorp array)
          (pprint-vector stream array))
         (t
