@@ -1,7 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.3.18:
+  * enhancement: specialized arrays can be printed readably without using
+    *read-eval*
   * bug fix: backtracing from several threads at once could fail
+
 
 changes in sbcl-1.3.18 relative to sbcl-1.3.17:
   * minor incompatible change: existing values of CFLAGS, ASFLAGS,
